--- a/components/css/sidebar.css
+++ b/components/css/sidebar.css
@@ -187,7 +187,7 @@ ul {
     color: #183153;
 }
 
-.search {
+/* .search {
     position: relative;
     width: 400px;
     margin: 0 10px;
@@ -195,8 +195,7 @@ ul {
 
 .search label {
     position: relative;
-    width: 100%;
-}
+} */
 
 .search .nav-search input {
     width: 100%;
