--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -14,6 +14,11 @@
 }
 
 /* =========== Table Format =========== */
+:root {
+    --dt-row-selected: 194,194,194 !important;
+    --dt-row-selected-text: 0,0,0 !important;
+}
+
 .search input, .dt-search input {
     border: 1px #ccc !important;
     border-style: none none solid none !important;
@@ -24,5 +29,10 @@ input:focus {
     outline:none !important;
     outline-width: 0 !important;
     box-shadow: none;
+}
+
+.select-info {
+    color: limegreen;
+    font-weight: bold;
 }
 
