--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,6 @@
 /* =========== Index PHP =========== */
-#guestCard svg {
+/* OBSOLETE / SCRAPED */
+/* #guestCard svg {
     width: 10rem;
     fill: #fff;
 }
@@ -19,10 +20,11 @@
 .card:hover {
     transform: scale(1.05); 
     box-shadow: 0 6px 8px rgba(0, 0, 0, 0.1); 
-}
+} */
 
 /* Smartphones (portrait and landscape) ----------- */
-@media only screen 
+/* OBSOLETE / SCRAPED */
+/* @media only screen 
 and (min-device-width : 320px) 
 and (max-device-width : 480px) {
     #guestCard svg {
@@ -46,6 +48,33 @@ and (max-device-width : 480px) {
         transform: scale(1.05); 
         box-shadow: 0 6px 8px rgba(0, 0, 0, 0.1); 
     }
+}
+
+/* =========== Sidebar Fix =========== */
+.navigation ul li a .icon {
+    /* position: relative;
+    display: block;
+    min-width: 60px;
+    height: 60px; */
+    line-height: 0 !important;
+    /* text-align: center; */
+}
+
+/* =========== BS5 Adjustments =========== */
+.container-fluid {
+    --bs-gutter-x: 0 !important;
+}
+
+/* Remove focus highlight */
+input:focus {
+    outline:none !important;
+    outline-width: 0 !important;
+    box-shadow: none;
+}
+
+.select-info {
+    color: limegreen;
+    font-weight: bold;
 }
 
 /* =========== Login PHP =========== */
@@ -83,45 +112,14 @@ and (max-device-width : 480px) {
 
 /* =========== Maps PHP =========== */
 #map {
-    height: 85vh;
+    height: 92.9vh;
     width: 100vw;
 }
 
-/* =========== Sidebar Fix =========== */
-.navigation ul li a .icon {
-    /* position: relative;
-    display: block;
-    min-width: 60px;
-    height: 60px; */
-    line-height: 0 !important;
-    /* text-align: center; */
+/* =========== Rooms PHP =========== */
+.search input, .dt-search input {
+    border: 1px #ccc !important;
+    border-style: none none solid none !important;
 }
 
-/* --------- curve outside ---------- */
-.navigation ul li:hover a::before,
-.navigation ul li.hovered a::before {
-    content: "";
-    position: absolute;
-    right: 0;
-    top: -50px;
-    width: 50px;
-    height: 50px;
-    background-color: transparent;
-    border-radius: 0 !important;
-    box-shadow: 35px 35px 0 10px var(--gray);
-    pointer-events: none;
-}
 
-.navigation ul li:hover a::after,
-.navigation ul li.hovered a::after {
-    content: "";
-    position: absolute;
-    right: 0;
-    bottom: -50px;
-    width: 50px;
-    height: 50px;
-    background-color: transparent;
-    border-radius: 0 !important;
-    box-shadow: 35px -35px 0 10px #fff;
-    pointer-events: none;
-}
